Remove bold parts project-cruise.vercel.app/privacy-policy Date of birth needs validation to prevent dates in the future (registration) On mobile, special offers (cruise line offers and partner offers) don't give a page refresh / close menu - makes it difficult to know if page has loaded. Unable to change password in My Account (project-cruise.vercel.app) Random white space on mobile when viewing the registration page, I'll send a screenshot (using Google Pixel 7 Pro, Chrome) When clicking "Save" it wants me to change my password, even though I'm not changing my password (https://project-cruise.vercel.app/my-account) In term 11 (The Supplier shall comply with the Publisher’s supplier policies.) Make this "Publisher's supplier policies" a link that opens in a new tab -> ourmedia.co.uk/policies/

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -163,8 +163,16 @@
   border-radius: 999px;
   color: #36453b !important;
 }
+/* YourComponent.css */
+.hyperlink {
+  color:  #FF9A31; /* You can replace this with your desired color code or name */
+  /* You can style the underline or remove it if needed */
+}
 
-
+.hyperlink:hover {
+  color: #007bff; /* You can replace this with your desired color code or name */
+  text-decoration: underline; /* You can style the underline or remove it if needed */
+}
 
 
 
